src/app/globals.css
@import "tailwindcss/preflight";
@import "tailwindcss";

html {
  scrollbar-width: none;
  /* Firefox */
  -ms-overflow-style: none;
  /* IE & Edge */
}

::-webkit-scrollbar {
  width: 0px;
  /* Chrome, Safari */
  background: transparent;
}

body {
  cursor: none;
  background-color: black;
  overflow-y: scroll;
  /* allow scrolling */
}

.bunny-hidden {
  opacity: 0;
  /* remove transform */
}

@keyframes bunnyRise {
  0% {
    opacity: 0;
  }

  20% {
    opacity: 1;
  }

  100% {
    opacity: 1;
  }
}

.bunny-rise {
  animation: bunnyRise 1.8s ease-out forwards;
}

/* Blinking cursor */
@keyframes blink {

  0%,
  100% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }
}

.animate-blink {
  animation: blink 1s step-end infinite;
}

/* Loading dots */
.dot-animate::after {
  content: "";
  display: inline-block;
  width: 1em;
  animation: dots 1.6s steps(4, end) infinite;
}

@keyframes dots {
  0% {
    content: "";
  }

  25% {
    content: ".";
  }

  50% {
    content: "..";
  }

  75% {
    content: "...";
  }

  100% {
    content: "";
  }
}

/* Custom cursor */
.custom-cursor-root {
  cursor: none;
}

.custom-cursor {
  position: fixed;
  top: 0;
  left: 0;
  width: 38px;
  height: 38px;
  border-radius: 50%;
  background-color: #B3FF00;
  pointer-events: none;
  z-index: 9999;
  transform: translate(-50%, -50%);
  transition: transform 150ms ease, opacity 150ms ease, background-color 150ms ease, box-shadow 150ms ease;
}

.custom-cursor.hovered {
  background-color: rgba(251, 253, 247, 0.1);
  box-shadow: 0 0 20px rgba(179, 255, 0, 0.4);
  transform: translate(-50%, -50%) scale(1.2);
}

.nav-hover {
  background-color: rgba(251, 253, 247, 0.1);
  box-shadow: 0 0 20px rgba(179, 255, 0, 0.4);
}

/* Mobile styles */
@media (max-width: 640px) {
  .roadmap-item {
    /* width: 100%; */
    margin: 2.5rem auto !important;
    text-align: left !important;
  }

  .roadmap-title {
    display: none !important;
  }

  .roadmap-phone-title {
    font-size: 2.8rem;
    display: block !important;
  }

  .decorative-dot {
    display: none !important;
  }
}

/* Desktop styles */
@media (min-width: 641px) {
  .roadmap-phone-title {
    font-size: 5rem;
    display: none !important;
  }

  .roadmap-item {
    position: absolute !important;
  }
}

@media (max-width: 640px) {
  body {
    cursor: default !important;
    /* Restore default cursor */
  }

  .custom-cursor-root {
    cursor: default !important;
    /* Make sure no none cursor here */
  }

  .custom-cursor {
    display: none !important;
    /* Hide the custom cursor */
  }
}

@media (max-width: 640px) {
  .text-left {
    text-align: left !important;
  }

  .items-start {
    align-items: flex-start !important;
  }
}

.menu-button {
  padding: 1.1em 2em;
  background: #66FF66;
  border: 2px solid #fff;
  font-size: 15px;
  color: #131313;
  cursor: pointer;
  overflow: hidden;
  border-radius: 12px;
  font-weight: bolder;
  box-shadow: 0 2px 0 2px #000;
  z-index: 1;
}

.menu-button::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 0%;
  background: rgb(0, 162, 202);
  bottom: 0;
  left: 0;
  z-index: -2;
  border-top-left-radius: 50% 30px;
  border-top-right-radius: 50% 30px;
  transition: height 0.5s ease, border-radius 0.5s ease;
}

.menu-button::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 0%;
  background: black;
  bottom: 0;
  left: 0;
  z-index: -1;
  border-top-left-radius: 50% 30px;
  border-top-right-radius: 50% 30px;
  transition: height 0.5s ease, border-radius 0.5s ease;
  transition-delay: 0.1s; /* Delay black until pink is done */
}

.menu-button:hover::before {
  height: 100%;
  border-radius: 0;
}

.menu-button:hover::after {
  height: 100%;
  border-radius: 0;
}

.menu-button:hover {
  color: #66FF66;
  box-shadow: 0 2px 0 2px ;
}

.menu-button:active {
  transform: scale(0.9);
}

@media (max-width: 640px) {
  .menu-button {
    padding: 0.8em 1.2em;
    font-size: 13px;
    border-radius: 8px;
  }
}

.bunny-img {
  width: 210px;
  height: auto;
}

@media (max-width: 640px) {
  .bunny-img3 {
    width: 100px; /* phone size */
  }
  .bunny-img4 {
    width: 320px; /* phone size */
  }
  .bunny-img5 {
    width: 100px; /* phone size */
  }
}

